# lang-null

./: '  .gitignore  Cargo.toml  Makefile  README.md  main.nl  notes.norg  test.asm
assets/: notes.norg
assets/null/: goal.nl  main.nl
assets/syscall/linux/: Notes.norg  exit.asm  print.asm
assets/syscall/mac/: print.asm
assets/syscall/windows/: Makefile  Notes.norg  exit.asm  print.asm
crates/fmt/: Cargo.toml
crates/fmt/src/: lib.rs  main.rs
crates/nasm/: Cargo.toml
crates/nasm/examples/: nasm.rs
crates/nasm/src/: lib.rs
crates/nasm/src/lang/: instruction.rs  lex.rs  mod.rs  parse.rs
examples/: exit.asm  print.asm  sample.asm
macros/: Cargo.toml  Notes.norg
macros/src/: lib.rs
macros/src/asm/: mod.rs  token.rs
macros/src/lang/: instruction.rs  lex.rs  mod.rs
macros/src/nasm/: instruction.rs  lex.rs  mod.rs  parse.rs
scripts/: badges.py  init.py  make_badges.py  sort.py
src/: error.rs  lib.rs  main.rs
src/compiler/: assembly.rs  external.rs  mod.rs  syscall.rs
src/compiler/assembly/: mod.rs  syscall.rs
src/lexer/: mod.rs  notes.norg  token.rs
src/parser/: built_in.rs  mod.rs  token.rs
syscall/mac/: Notes.norg  exit.asm
syscall/windows/: print.asm
toolchain/Golink/: GoLink.htm
