[package]
name = "null-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true

[dependencies]
paste = "1.0.14"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.66"
quote = "1.0.33"
regex = "1.9.5"
syn = { version = "2.0.32", features = ["extra-traits", "fold", "full"] }
